# smart-qa-project

./: README.md  main.py  pyproject.toml
configs/: logging.py
smart_qa/: client.py  custom_exceptions.py  helper.py
tests/: conftest.py  test_client.py
tests/data/: sample.txt
